--- a/register.html
+++ b/register.html
@@ -17,6 +17,9 @@
             </div>
         </div>
         <div class="right-section">
+            <a href="#" class="back-button">
+                <span class="arrow">&#8592;</span> Kembali
+            </a>
             <div class="circle-container">
                 <img src="img/Group 4.png" alt="Circle" class="circle-image">
             </div>
