--- a/register.html
+++ b/register.html
@@ -23,7 +23,7 @@
             <div class="circle-container">
                 <img src="img/Group 4.png" alt="Circle" class="circle-image">
             </div>
-            <div class="welcome-text">
+            <div class="create-account">
                 <h1>Create an account</h1>
                 <p>Please type your account info!</p>
             </div>
